--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
     </head>
     <body>
       <div class="animation-container">
-        <img src="images/pic7.jpg" alt="pic7" class="center-pic7" width="750" height="850">
-        <img src="images/pic1.jpg" alt="pic1" class="center-pic1" width="750" height="850"> 
-        <img src="images/pic5.jpg" alt="pic5" class="center-pic5" width="750" height="850"> 
+        <img src="images/images/pic7.jpg" alt="pic7" class="center-pic7" width="750" height="850">
+        <img src="images/images/pic1.jpg" alt="pic1" class="center-pic1" width="750" height="850"> 
+        <img src="images/images/pic5.jpg" alt="pic5" class="center-pic5" width="750" height="850"> 
       </div>
     </body>
     </html>
