--- a/aboutus.html
+++ b/aboutus.html
@@ -90,7 +90,7 @@
                 <p style="font-family: 'Times New Roman';font-size: large;color: greenyellow;">We are committed to providing the best customer service, and we strive to build lasting relationships with our clients based on trust and reliability. When you choose us, we can assured you that your lawn is in good hands.</p>
                 <p style="font-family: 'Times New Roman';font-size: large;color: greenyellow;">Thank you for considering us for your lawn care needs. We look forward to the opportunity to work with you and help you achieve the beautiful lawn you deserve.</p>
             </section>
-              <img src="images/manuel2,jpg.jpg" alt="manuel2" height="400" width="400">
-              <img src="images/manuel,jpg.jpg" alt="manuel" height="400" width="400">
-              <img src="images/equipment.jpg" alt="equipment" height="400" width="400">
+              <img src="images/images/manuel2,jpg.jpg" alt="manuel2" height="400" width="400">
+              <img src="images/images/manuel,jpg.jpg" alt="manuel" height="400" width="400">
+              <img src="images/images/equipment.jpg" alt="equipment" height="400" width="400">
               
