--- a/gallary.html
+++ b/gallary.html
@@ -65,13 +65,13 @@
                 </p><p style="font-family: Arial, Helvetica, sans-serif;font-size: xx-large;"></p>
                 <p style="font-family: 'Times New Roman';font-size: large;color: greenyellow;"> Please take a look at some of the pictures showcasing the yards and lawn work we have completed in the past</p>
               </section>
-              <img src="images/afterpic2.jpg" alt="afterpic2" class="center-afterpic2" height="350" width="350" >
-              <img src="images/afterpic7.jpg" alt="pic2" height="350" width="350">
-              <img src="images/pic1.jpg" alt="pic1" height="350" width="350">
-              <img src="images/pic3.jpg" alt="pic3" height="350" width="350">
-              <img src="images/pic4.jpg" alt="pic4" height="350" width="350">
-              <img src="images/pic5.jpg" alt="pic5" height="350" width="350">
-              <img src="images/pic6.jpg" alt="pic6" height="350" width="350">
-              <img src="images/pic7.jpg" alt="pic7" height="350" width="350">
-              <img src="images/beforepic1.jpg" alt="beforepic1" height="350" width="350" >
+              <img src="images/images/afterpic2.jpg" alt="afterpic2" class="center-afterpic2" height="350" width="350" >
+              <img src="images/images/afterpic7.jpg" alt="pic2" height="350" width="350">
+              <img src="images/images/pic1.jpg" alt="pic1" height="350" width="350">
+              <img src="images/images/pic3.jpg" alt="pic3" height="350" width="350">
+              <img src="images/images/pic4.jpg" alt="pic4" height="350" width="350">
+              <img src="images/images/pic5.jpg" alt="pic5" height="350" width="350">
+              <img src="images/images/pic6.jpg" alt="pic6" height="350" width="350">
+              <img src="images/images/pic7.jpg" alt="pic7" height="350" width="350">
+              <img src="images/images/beforepic1.jpg" alt="beforepic1" height="350" width="350" >
               
