--- a/services.html
+++ b/services.html
@@ -64,12 +64,12 @@
 			<section id="services">
 				<ul>
           <div style="text-align: center;">
-          <img src="images/Lawn.jpg"  alt="Lawn" style="width: 300px; height: 300px; ">
+          <img src="images/images/Lawn.jpg"  alt="Lawn" style="width: 300px; height: 300px; ">
 				  <p style="font-family: 'Times New Roman';font-size: x-large;text-align:center; color: greenyellow;"> Lawn Mowing - $30 </p> 
 
           <div>
-            <img src="images/edging.jpg" style="display: inline-block ;width: 300px;" height="300px">
-            <img src="images/trim.jpg" style="display: inline-block; width: 300px;" height="300px">
+            <img src="images/images/edging.jpg" style="display: inline-block ;width: 300px;" height="300px">
+            <img src="images/images/trim.jpg" style="display: inline-block; width: 300px;" height="300px">
           </div>
           <div>
             <p style="font-family: 'Times New Roman';font-size: x-large;color: yellowgreen;">Edging - $20</p>
@@ -77,8 +77,8 @@
           </div>
 
           <div>
-            <img src="images/weedcontrol.jpg" style="display: inline-block ;width: 300px;" height="300px">
-            <img src="images/fertilizing.jpg" style="display: inline-block; width: 300px;" height="300px">
+            <img src="images/images/weedcontrol.jpg" style="display: inline-block ;width: 300px;" height="300px">
+            <img src="images/images/fertilizing.jpg" style="display: inline-block; width: 300px;" height="300px">
           </div>
           <div>
             <p style="font-family: 'Times New Roman';font-size: x-large;color: greenyellow;">Weed Control - $30</p>
